--- a/Jorge.Gslate.Web/Views/Shared/_Layout.cshtml
+++ b/Jorge.Gslate.Web/Views/Shared/_Layout.cshtml
@@ -52,6 +52,10 @@
             </div>
         </footer>
 
+        @*<script type="text/javascript">
+            var baseUrl = "@Url.Content("~/")";
+        </script>*@
+
         <environment include="Development">
             <script src="~/lib/jquery/dist/jquery.js"></script>
             <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
