--- a/Jorge.Gslate.Web/Views/Home/Index.cshtml
+++ b/Jorge.Gslate.Web/Views/Home/Index.cshtml
@@ -1,8 +1,44 @@
-﻿@{
+﻿@model ProjectUserViewModel
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+<div class="col-md-4 col-sm-12 col-xs-12">
+    <div class="form-group">
+        <label class="control-label">Users: </label>
+        <select id="filter-user" asp-for="Id" class="form-control" asp-items="Model.Users"></select>
+    </div>
+</div>
+
+<table id="project-table" class="display nowrap table table-hover table-striped table-bordered" cellspacing="0" width="100%">
+    <thead>
+        <tr>
+            <th>Project Id</th>
+            <th>StartDate</th>
+            <th>Time to Start</th>
+            <th>End Date</th>
+            <th>Credits</th>
+            <th>Status</th>
+        </tr>
+    </thead>
+</table>
+
+@section Scripts {
+    <script src="~/lib/datatables/datatables.min.js"></script>
+    <script src="~/lib/datatables/cdn.datatables.net/buttons/1.2.2/js/dataTables.buttons.min.js"></script>
+    <script src="~/lib/datatables/cdn.datatables.net/buttons/1.2.2/js/buttons.flash.min.js"></script>
+    <script src="~/lib/datatables/cdnjs.cloudflare.com/ajax/libs/jszip/2.5.0/jszip.min.js"></script>
+    <script src="~/lib/datatables/cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/pdfmake.min.js"></script>
+    <script src="~/lib/datatables/cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/vfs_fonts.js"></script>
+    <script src="~/lib/datatables/cdn.datatables.net/buttons/1.2.2/js/buttons.html5.min.js"></script>
+    <script src="~/lib/datatables/cdn.datatables.net/buttons/1.2.2/js/buttons.print.min.js"></script>
+
+
+    <script src="~/js/list.js"></script>
+
+}
